[package]
name = "twitch_ircv3_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
ircv3_parse = { git = 'https://github.com/m3idnotfree/ircv3_parse.git' }
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
pretty_assertions = "1.4.0"
