[package]
name = "twitch_ircv3_parse"
version = "0.0.1"
authors = ["m3id"]
edition = "2021"
description = "Twitch Ircv3 message parse"
repository = "https://github.com/m3idnotfree/twitch_ircv3_parse.git"
license = "MIT OR Apache-2.0"
keywords = ["twitch", "ircv3"]


[dependencies]
ircv3_parse = "0.0.8"
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
twitch_helix_api = "0.0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_json = "1.0.114"
