[package]
name = "twitch_ircv3_parse"
version = "0.0.3"
authors = ["m3id"]
edition = "2021"
description = "Twitch Ircv3 message parse"
repository = "https://github.com/m3idnotfree/twitch_ircv3_parse.git"
license = "MIT OR Apache-2.0"
keywords = ["twitch", "ircv3"]


[dependencies]
ircv3_parse = "0.1.2"
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
twitch_highway = "0.0.2"
serde_json = "1.0.114"

[dev-dependencies]
pretty_assertions = "1.4.0"
